--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/nunito": "^4.5.10",
     "@headlessui/react": "^1.7.2",
     "@supabase/supabase-js": "^2.0.0-rc.10",
     "next": "12.3.1",
