--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fontsource/nunito": "^4.5.10",
     "@headlessui/react": "^1.7.2",
     "@supabase/supabase-js": "^2.0.0-rc.10",
+    "js-confetti": "^0.10.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
